; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/hexagon/extr_hexagon.c_hex_get_sub_regpair.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/hexagon/extr_hexagon.c_hex_get_sub_regpair.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"R1:R0\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"R3:R2\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"R5:R4\00", align 1
@.str.3 = private unnamed_addr constant [6 x i8] c"R7:R6\00", align 1
@.str.4 = private unnamed_addr constant [8 x i8] c"R17:R16\00", align 1
@.str.5 = private unnamed_addr constant [8 x i8] c"R19:R18\00", align 1
@.str.6 = private unnamed_addr constant [8 x i8] c"R21:R20\00", align 1
@.str.7 = private unnamed_addr constant [8 x i8] c"R23:R22\00", align 1
@.str.8 = private unnamed_addr constant [6 x i8] c"<err>\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @hex_get_sub_regpair(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %13 [
    i32 133, label %5
    i32 130, label %6
    i32 129, label %7
    i32 128, label %8
    i32 135, label %9
    i32 134, label %10
    i32 132, label %11
    i32 131, label %12
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %14

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %14

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %14

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %14

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %14

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %14

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %14

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %14

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %14

14:                                               ; preds = %13, %12, %11, %10, %9, %8, %7, %6, %5
  %15 = load i8*, i8** %2, align 8
  ret i8* %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
